Fix outermost white spaces
These white spaces are wrong on all screen, should scale.

--- a/src/css/baseline.css
+++ b/src/css/baseline.css
@@ -8,7 +8,7 @@ html {
 
 /* Sections */
 body {
-  margin: 1.5rem auto;
+  margin: 1rem auto;
   max-width: 36rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
